--- a/templates/featured-container.html
+++ b/templates/featured-container.html
@@ -1,20 +1,39 @@
 {{ define "card" }}
 <div
-    class='relative rounded-md border sm:max-w-xs overflow-clip shadow-md transition-all ease-out cursor-pointer bg-white'>
-    <div class='h-48 overflow-y-hidden'>
+    class='relative rounded-md border border-gray-200 sm:max-w-sm overflow-clip shadow-md transition-all ease-out cursor-pointer bg-white hover:drop-shadow-lg'>
+    <div class='h-56 overflow-y-hidden'>
         <div style="box-shadow: inset 0px -40px 40px 0px rgba(0, 0, 0, 0.8); background-image: url({{ .ImageUrl }});"
-            class="w-full h-full relative bg-cover">
-            <div class='text-white text-2xl font-bold absolute bottom-0 m-2'>₹{{ .LowerLimit }} - ₹{{ .UpperLimit }}
+            class="w-full h-full relative bg-100% bg-center hover:bg-scale-105 transition-all">
+            <div class='text-white text-xl font-bold absolute bottom-0 m-4 tracking-wide'>₹{{
+                .LowerLimit.LowerLimitPrice }}{{
+                .LowerLimit.Denomination }} - ₹{{ .UpperLimit.UpperLimitPrice }}{{ .UpperLimit.Denomination }}
             </div>
+            <div class="absolute font-[400] flex items-center text-sm bg-red-500 text-white py-1 px-2 top-3 left-3">
+                <svg fill="none" class="w-4 mr-1" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25">
+                    </path>
+                </svg>
+                {{ .Type }}
+            </div>
+            <div class="absolute font-[400] text-sm bg-green-400 text-white py-1 px-2 top-3 right-3">Ready To Move</div>
         </div>
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth="1.5" stroke="currentColor"
-        class="absolute right-4 top-40 w-14 h-14 bg-red-500 rounded-full p-2 text-white">
-        <path strokeLinecap="round" strokeLinejoin="round" d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75" />
-    </svg>
-    <div class='p-2 border-gray-50 text-gray-700'>
-        <div class='font-bold text-lg'>{{ .Name }}</div>
-        <div class='font-light'>{{ .Type }}</div>
+    <div class='p-4 border-gray-50 tracking-wide'>
+        <div class="text-sm font-[500] tracking-wider text-green-400">Apartments</div>
+        <div class='font-bold text-xl'>{{ .Name }}</div>
+        <div class="mt-2 font-[500] text-slate-400 flex items-center">
+            <div class="inline-block h-4 w-4 mr-1">
+                <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M15 10.5a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1115 0z"></path>
+                </svg>
+            </div>
+            {{ .Area }}, {{ .City }}
+        </div>
     </div>
 </div>
 {{ end }}
@@ -22,9 +41,21 @@
 {{ if not .PropertyThumbnails}}
 Nothing to show
 {{ else }}
-<div class="md:max-w-screen-md lg:max-w-screen-lg ml-auto mr-auto">
-    <div class="inline-block m-1 mb-2 text-2xl border-b-4 border-red-600 ">Featured Plots</div>
-    <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-x-3 gap-y-2">
+<div class="md:max-w-[800px] lg:max-w-[1200px] mx-5 md:mx-auto">
+    <div class="inline-block m-1 mb-2 text-2xl border-b-4 border-red-600 font-[500]">Properties <span
+            class="text-green-400">Bengaluru</span></div>
+    <div class="flex justify-center w-full items-center space-x-2 mt-2 mb-4">
+        <div
+            class="px-3 py-2 text-white bg-red-500 border border-transparent rounded-md font-bold cursor-pointer transition">
+            Nearing Completion</div>
+        <div
+            class="px-3 py-2 text-gray-500 border border-transparent hover:border-gray-200 bg-gray-100 rounded-md font-bold cursor-pointer">
+            Luxury</div>
+        <div
+            class="px-3 py-2 text-gray-500 border border-transparent hover:border-gray-200 bg-gray-100 rounded-md font-bold cursor-pointer">
+            Budget friendly</div>
+    </div>
+    <div class="grid sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-3  gap-x-2 gap-y-2">
         {{ range .PropertyThumbnails }}
         {{ template "card" . }}
         {{ end }}
