--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 
-<body class="bg-gray-200">
+<body class="bg-white">
     <div hx-trigger="load" hx-get="/section/featured-container" hx-swap="outerHTML">
     </div>
     {{ template "contact-form" . }}
