--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer utilities {
-  .bg-scale-105 {
+.card:hover .image {
     background-size: 105%;
     transition: background-size;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 0.3s;
-  }
+    transition-duration: 0.7s;
 }
